# llmx

./: AGENTS.md  CHANGELOG.md  LITELLM-SETUP.md  PNPM.md  README.md  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.devcontainer/: README.md  devcontainer.json
.github/: dependabot.yaml  dotslash-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: 2-bug-report.yml  3-docs-issue.yml  4-feature-request.yml
.github/codex/labels/: codex-rust-review.md
.github/llmx/labels/: llmx-attempt.md  llmx-review.md  llmx-rust-review.md  llmx-triage.md
.github/workflows/: ci.yml  cla.yml  issue-deduplicator.yml  issue-labeler.yml  rust-ci.yml  rust-release.yml  sdk.yml
codex-rs/: Cargo.toml
docs/: CLA.md  advanced.md  agents_md.md  authentication.md  config.md  contributing.md  example-config.md  exec.md  experimental.md  faq.md  getting-started.md  install.md  open-source-fund.md  prompts.md  release_management.md  sandbox.md  slash_commands.md  zdr.md
llmx-cli/: README.md  package-lock.json  package.json
llmx-cli/scripts/: README.md  build_npm_package.py  install_native_deps.py
llmx-rs/: Cargo.toml  FIXED-LITELLM-INTEGRATION.md  README.md  RELEASE-PLAN.md
llmx-rs/ansi-escape/: Cargo.toml  README.md
llmx-rs/app-server/: Cargo.toml  README.md
llmx-rs/app-server-protocol/: Cargo.toml
llmx-rs/app-server-protocol/src/: export.rs
llmx-rs/app-server-protocol/src/protocol/: common.rs  v1.rs  v2.rs
llmx-rs/app-server/src/: fuzzy_file_search.rs  lib.rs  llmx_message_processor.rs  main.rs  message_processor.rs  models.rs  outgoing_message.rs
llmx-rs/app-server/tests/common/: Cargo.toml  auth_fixtures.rs  lib.rs  mcp_process.rs  rollout.rs
llmx-rs/app-server/tests/suite/: archive_conversation.rs  auth.rs  config.rs  create_conversation.rs  fuzzy_file_search.rs  interrupt.rs  list_resume.rs  llmx_message_processor_flow.rs  login.rs  mod.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
llmx-rs/app-server/tests/suite/v2/: account.rs  model_list.rs  rate_limits.rs  thread_archive.rs  thread_list.rs  thread_resume.rs  thread_start.rs  turn_interrupt.rs  turn_start.rs
llmx-rs/apply-patch/: Cargo.toml
llmx-rs/apply-patch/src/: main.rs  parser.rs
llmx-rs/arg0/: Cargo.toml
llmx-rs/arg0/src/: lib.rs
llmx-rs/async-utils/: Cargo.toml
llmx-rs/backend-client/: Cargo.toml
llmx-rs/backend-client/src/: client.rs  types.rs
llmx-rs/chatgpt/: Cargo.toml  README.md
llmx-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs  get_task.rs
llmx-rs/chatgpt/tests/: task_turn_fixture.json
llmx-rs/chatgpt/tests/suite/: apply_command_e2e.rs
llmx-rs/cli/: Cargo.toml
llmx-rs/cli/src/: debug_sandbox.rs  lib.rs  login.rs  main.rs  mcp_cmd.rs  wsl_paths.rs
llmx-rs/cli/tests/: mcp_add_remove.rs  mcp_list.rs
llmx-rs/cloud-tasks/: Cargo.toml
llmx-rs/cloud-tasks-client/: Cargo.toml
llmx-rs/cloud-tasks-client/src/: http.rs  lib.rs
llmx-rs/cloud-tasks/src/: app.rs  cli.rs  env_detect.rs  lib.rs  new_task.rs  ui.rs  util.rs
llmx-rs/cloud-tasks/tests/: env_filter.rs
llmx-rs/common/: Cargo.toml  README.md
llmx-rs/common/src/: approval_mode_cli_arg.rs  approval_presets.rs  config_override.rs  config_summary.rs  model_presets.rs  sandbox_mode_cli_arg.rs  sandbox_summary.rs
llmx-rs/core/: Cargo.toml  README.md  gpt_5_codex_prompt.md  prompt.md
llmx-rs/core/src/: apply_patch.rs  auth.rs  chat_completions.rs  client.rs  client_common.rs  compact.rs  conversation_manager.rs  custom_prompts.rs  default_client.rs  environment_context.rs  error.rs  event_mapping.rs  exec.rs  flags.rs  git_info.rs  landlock.rs  lib.rs  llmx.rs  llmx_conversation.rs  llmx_delegate.rs  mcp_connection_manager.rs  mcp_tool_call.rs  message_history.rs  model_family.rs  model_provider_info.rs  openai_model_info.rs  otel_init.rs  parse_command.rs  project_doc.rs  response_processing.rs  safety.rs  seatbelt.rs  shell.rs  spawn.rs  truncate.rs  user_instructions.rs  user_shell_command.rs
llmx-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
llmx-rs/core/tests/common/: Cargo.toml  lib.rs  responses.rs  test_codex.rs  test_codex_exec.rs  test_llmx.rs  test_llmx_exec.rs
llmx-rs/docs/: llmx_mcp_interface.md  protocol_v1.md
llmx-rs/exec/: Cargo.toml
llmx-rs/exec/src/: cli.rs  event_processor.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  exec_events.rs  lib.rs  main.rs
llmx-rs/exec/tests/: event_processor_with_json_output.rs
llmx-rs/exec/tests/suite/: apply_patch.rs  auth_env.rs  originator.rs  output_schema.rs  resume.rs  sandbox.rs  server_error_exit.rs
llmx-rs/execpolicy/: Cargo.toml  README.md
llmx-rs/execpolicy/src/: main.rs
llmx-rs/feedback/: Cargo.toml
llmx-rs/feedback/src/: lib.rs
llmx-rs/file-search/: Cargo.toml  README.md
llmx-rs/file-search/src/: main.rs
llmx-rs/keyring-store/: Cargo.toml
llmx-rs/linux-sandbox/: Cargo.toml  README.md
llmx-rs/linux-sandbox/src/: landlock.rs  lib.rs  linux_run_main.rs  main.rs
llmx-rs/llmx-backend-openapi-models/: Cargo.toml
llmx-rs/login/: Cargo.toml
llmx-rs/login/src/: device_code_auth.rs  lib.rs  server.rs
llmx-rs/mcp-server/: Cargo.toml
llmx-rs/mcp-server/src/: exec_approval.rs  lib.rs  llmx_tool_config.rs  (+5 more)
llmx-rs/mcp-types/: generate_mcp_types.py
llmx-rs/ollama/: Cargo.toml
llmx-rs/ollama/src/: client.rs  lib.rs
llmx-rs/otel/: Cargo.toml
llmx-rs/process-hardening/: Cargo.toml  README.md
llmx-rs/protocol/: Cargo.toml  README.md
llmx-rs/responses-api-proxy/: Cargo.toml  README.md
llmx-rs/responses-api-proxy/npm/: README.md  package.json
llmx-rs/responses-api-proxy/src/: main.rs  read_api_key.rs
llmx-rs/rmcp-client/: Cargo.toml
llmx-rs/stdio-to-uds/: Cargo.toml  README.md
llmx-rs/tui/: Cargo.toml  styles.md
llmx-rs/utils/image/: Cargo.toml
llmx-rs/utils/image/src/: lib.rs
llmx-rs/windows-sandbox-rs/: Cargo.toml  sandbox_smoketests.py
scripts/: debug-llmx.sh  rename-crates.sh  stage_npm_packages.py
sdk/typescript/: README.md  jest.config.cjs  package.json
(+252 files in other folders)
