[package]
edition = "2024"
name = "llmx-ansi-escape"
version = { workspace = true }

[lib]
name = "llmx_ansi_escape"
path = "src/lib.rs"

[dependencies]
ansi-to-tui = { workspace = true }
ratatui = { workspace = true, features = [
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
tracing = { workspace = true, features = ["log"] }
