[package]
edition = "2024"
name = "llmx-app-server"
version = { workspace = true }

[[bin]]
name = "llmx-app-server"
path = "src/main.rs"

[lib]
name = "llmx_app_server"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
llmx-arg0 = { workspace = true }
llmx-common = { workspace = true, features = ["cli"] }
llmx-core = { workspace = true }
llmx-backend-client = { workspace = true }
llmx-file-search = { workspace = true }
llmx-login = { workspace = true }
llmx-protocol = { workspace = true }
llmx-app-server-protocol = { workspace = true }
llmx-feedback = { workspace = true }
llmx-utils-json-to-toml = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
opentelemetry-appender-tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }

[dev-dependencies]
app_test_support = { workspace = true }
assert_cmd = { workspace = true }
base64 = { workspace = true }
core_test_support = { workspace = true }
os_info = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
wiremock = { workspace = true }
