[package]
edition = "2024"
name = "llmx-arg0"
version = { workspace = true }

[lib]
name = "llmx_arg0"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
llmx-apply-patch = { workspace = true }
llmx-core = { workspace = true }
llmx-linux-sandbox = { workspace = true }
dotenvy = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
