[package]
edition = "2024"
name = "llmx-chatgpt"
version = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
llmx-common = { workspace = true, features = ["cli"] }
llmx-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
llmx-git = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
