[package]
edition = "2024"
name = "llmx-cli"
version = { workspace = true }

[[bin]]
name = "llmx"
path = "src/main.rs"

[lib]
name = "llmx_cli"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
llmx-app-server = { workspace = true }
llmx-app-server-protocol = { workspace = true }
llmx-arg0 = { workspace = true }
llmx-chatgpt = { workspace = true }
llmx-cloud-tasks = { path = "../cloud-tasks" }
llmx-common = { workspace = true, features = ["cli"] }
llmx-core = { workspace = true }
llmx-exec = { workspace = true }
llmx-login = { workspace = true }
llmx-mcp-server = { workspace = true }
llmx-process-hardening = { workspace = true }
llmx-protocol = { workspace = true }
llmx-responses-api-proxy = { workspace = true }
llmx-rmcp-client = { workspace = true }
llmx-stdio-to-uds = { workspace = true }
llmx-tui = { workspace = true }
ctor = { workspace = true }
libc = { workspace = true }
owo-colors = { workspace = true }
regex-lite = { workspace = true}
serde_json = { workspace = true }
supports-color = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
codex_windows_sandbox = { package = "llmx-windows-sandbox", path = "../windows-sandbox-rs" }

[dev-dependencies]
assert_cmd = { workspace = true }
assert_matches = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
