[package]
edition = "2024"
name = "llmx-cloud-tasks"
version = { workspace = true }

[lib]
name = "llmx_cloud_tasks"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
llmx-cloud-tasks-client = { path = "../cloud-tasks-client", features = [
    "mock",
    "online",
] }
llmx-common = { path = "../common", features = ["cli"] }
llmx-core = { path = "../core" }
llmx-login = { path = "../login" }
llmx-tui = { path = "../tui" }
crossterm = { workspace = true, features = ["event-stream"] }
ratatui = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
unicode-width = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
