[package]
edition = "2024"
name = "llmx-file-search"
version = { workspace = true }

[[bin]]
name = "llmx-file-search"
path = "src/main.rs"

[lib]
name = "llmx_file_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ignore = { workspace = true }
nucleo-matcher = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
